# obd2-mcp-server

./: .gitignore  README.md  db.py  guidelines.md  main.py  pyproject.toml  seed.py
.github/workflows/: ci.yml
tests/: test_tools.py
